--- a/AdminLauncher.AppWPF/MainWindow.xaml
+++ b/AdminLauncher.AppWPF/MainWindow.xaml
@@ -282,7 +282,7 @@ Grid.Row="0" Margin="5"/>
             </TabItem>
             
             <!-- Tab Add Routine -->
-            <TabItem x:Name="AddRoutineTab" Visibility="Visible">
+            <TabItem x:Name="AddRoutineTab" Visibility="Collapsed">
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0,10,0,0">
                         <packIcons:PackIconMaterial Kind="ListBox" Width="24" Height="24" Margin="0,0,5,0"/>
